Create styles from maintenance-list-agent

--- a/src/components/maintenance-filter/index.module.scss
+++ b/src/components/maintenance-filter/index.module.scss
@@ -18,13 +18,11 @@
         }
         select {
             width: 100%;
-            min-width: 125px;
             padding: 10px;
             background-color: var(--background100);
         }
         &.agent {
-            width: 100%;
-            max-width: 300px;
+           flex: 1;
         }
     }
 }
