--- a/src/styles/variants.css
+++ b/src/styles/variants.css
@@ -2,4 +2,8 @@
     --text90: #777;
 
     --background100: #ebebeb;
+    --background90: #cfcfcf;
+
+    --detach100: #a50700;
+    --detach90: #e4261a;
 }
