Create and define styles from compnente maintenances

--- a/src/components/logo/index.module.scss
+++ b/src/components/logo/index.module.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-self: center;
     justify-content: center;
-    margin: 70px 0;
+    margin: 20px 0 70px 0;
 
     span {
         text-align: center;
