--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -3,9 +3,5 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
-  .maintenances {
-    display: flex;
-    gap: 50px;
-  }
+  padding: 100px 0;
 }
