--- a/src/styles/variants.css
+++ b/src/styles/variants.css
@@ -1,9 +1,13 @@
 :root {
-    --text90: #777;
+    --text100: #2222;
+    --text90: #555;
+    --text80: #888;
 
     --background100: #ebebeb;
     --background90: #cfcfcf;
 
     --detach100: #a50700;
     --detach90: #e4261a;
+
+    --boxed-size: 800px;
 }
