--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -4,4 +4,10 @@
   align-items: center;
   justify-content: center;
   padding: 100px 0;
+  .content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px;
+  }
 }
