--- a/src/components/maintanence/maintenances.module.scss
+++ b/src/components/maintanence/maintenances.module.scss
@@ -28,7 +28,10 @@
             justify-content: space-between;
             gap: 15px;
             padding: 5px 0;
-            border-bottom: 1px solid var(--background90);
+            
+            &.underline {
+                border-bottom: 1px solid var(--background90);
+            }
 
             &.header {
                 margin: -10px -20px 0 -20px;
