--- a/src/styles/variants.css
+++ b/src/styles/variants.css
@@ -2,9 +2,11 @@
     --text100: #2222;
     --text90: #555;
     --text80: #888;
+    --text0: #fff;
 
     --background100: #ebebeb;
     --background90: #cfcfcf;
+    --background20: #595959;
 
     --detach100: #a50700;
     --detach90: #e4261a;
