--- a/src/styles/variants.css
+++ b/src/styles/variants.css
@@ -7,6 +7,7 @@
     --background100: #ebebeb;
     --background90: #cfcfcf;
     --background20: #595959;
+    --background-overlay: #0000009a;
 
     --detach100: #a50700;
     --detach90: #e4261a;
