--- a/src/components/equipment/index.module.scss
+++ b/src/components/equipment/index.module.scss
@@ -12,7 +12,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.603);
+            background: var(--background-overlay);
             z-index: 999;
             display: flex;
             align-items: center;
